# readme_ai

./: README.md
example/: CMakeLists.txt  hedgehog_readmeai_output.txt  vcpkg.json
example/particle_simulator/: CMakeLists.txt  particle_simulator.cpp
src/: readme_ai_server.py
src/utils/: _init_.py  crawl.py  download.py  fetch.py
test/: client.py
